# fcsc

./: .gitignore  CMakeLists.txt  README.md  fcsc.py  fcsc_sandwich.py  fcsc_sandwich_inference.py  package.xml  requirements.txt  split_dataset.py  test_fcsc_sandwich.ipynb
data/: split_sandwich_images.py  via_region_data.csv  via_region_data.json
data/sandwich_data/train/: via_region_data.json
data/sandwich_data/val/: via_region_data.json
include/fcsc/: sandwich_pose.hpp
launch/: run_fcsc_sandwich.launch
mrcnn/: model.py  utils.py
msg/: ObjectMask.msg  ObjectMaskArray.msg  PointCloud2Array.msg
scripts/: fcsc_get_pose_sample.py  fcsc_sandwich.py  fcsc_sandwich_client.py  fcsc_sandwich_inference.py  fcsc_sandwich_server.py  image_assembly_server.py  test_fcsc_sandwich.ipynb  total_client.py
sh/: preparation.sh
src/: sandwich_pose.cpp
srv/: ImageAssembly.srv  ObjectMaskSrv.srv  SandwichPose.srv
utils/: bag_to_images.py  bag_to_images_sandwich.py
